[package]
name = "penguin-application"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N> <n.henrik.g.nilsson@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Appbuilder and abstraction layer for building applications using legion ECS."
repository = "https://github.com/Henrik-N/penguin-app"

[lib]
name = "penguin_app"

[features]
time-plugin = []

[dependencies]
# ----- Workspace ----- #
penguin-config = { version = "0.1" }
serde = { version = "1.0" }

# ----- Errors ----- #
anyhow = { version = "1.0", features = ["backtrace"] }

# ----- ECS ----- #
legion = { version = "0.4.0" }

# ----- Utility ----- #
chrono = { version = "0.4" } # time

# ----- Logging ----- #
log = { version = "0.4" }
fern = { version = "0.5", features = ["colored"] }

# ----- Window creation ----- #
winit = { version = "0.22.2" } # cross-platform window creation and management

